tests/integration/errors/named_arg_unknown.rsg
// TEST: compile_error
// EXPECT-ERROR: no parameter named 'c'
module test_err

fn add(a: i32, b: i32) = a + b

fn main() {
    result := add(c = 1, b = 2)
}
